<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/imghome"
    android:orientation="vertical">

    <TextView
        android:id="@+id/update_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:shadowColor="@color/black"
        android:shadowRadius="20"
        android:text="@string/update_company_details"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <EditText
                android:id="@+id/etcompany_name"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_industry"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/industry"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_vacancies"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/vacancy"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_no"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/number"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_mail"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_address"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_link"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/link"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etcompany_description"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawablePadding="8dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/btnupdatecompany"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/updatecompanydetailsbtn"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

