<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/imghome"
    android:orientation="vertical"
    tools:context=".activities.AddCompany">

    <TextView
        android:id="@+id/add_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:shadowColor="@color/black"
        android:shadowRadius="20"
        android:text="@string/add_company"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <EditText
                android:id="@+id/company_name"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_industry"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/industry"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_vacancies"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/vacancy"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_no"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/number"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_mail"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_address"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_link"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/link"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/company_description"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_star_24"
                android:drawablePadding="8dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/btnsavecompany"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/savecompanybtn"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

