<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imghome"
    android:orientation="vertical"
    tools:context=".activities.CompanyPage">

    <TextView
        android:id="@+id/add_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:paddingTop="20dp"
        android:shadowColor="@color/black"
        android:shadowRadius="20"
        android:text="@string/welcome_company"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <Button
            android:id="@+id/btnaddcompany"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/addcompanybtn"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btnfetchcompany"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="60dp"
            android:text="@string/fetchcompanybtn"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

    </LinearLayout>

</LinearLayout>

